# pixrium

./: Cargo.toml  README.md  justfile
i18n/en/: pixrium.ftl
resources/: app.desktop  app.metainfo.xml
src/: app.rs  font.rs  main.rs
src/math/: mod.rs  projection.rs
src/tool/: mod.rs  pan.rs  pen.rs  zoom.rs
src/widget/: mod.rs
src/widget/sphere_canvas/: mod.rs
src/widget/sphere_canvas/shaders/: sphere.wgsl
