[package]
name = "pixrium"
version = "0.1.0"
edition = "2024"

[dependencies]
glam = { version = "0.30", features = ["bytemuck"] }
iced = { version = "0.13", features = ["advanced"] }
iced_aw = { version = "0.12" }
rfd = "0.15"
bytemuck = "1.23"
image = "0.25"

[patch.crates-io]
iced = { path = "../iced" }
iced_aw = { path = "../iced_aw" }